<?xml version="1.0" encoding="utf-8"?>
<menu
  xmlns:android="http://schemas.android.com/apk/res/android">
    <item android:icon="@drawable/ic_menu_refresh" android:enabled="false" android:id="@id/menu_netplay_sync" android:visible="false" android:title="@string/netplay_sync" />
    <item android:icon="@android:drawable/ic_menu_set_as" android:id="@id/menu_load_state" android:title="@string/load_state" android:alphabeticShortcut="l" />
    <item android:icon="@android:drawable/ic_menu_save" android:id="@id/menu_save_state" android:title="@string/save_state" android:alphabeticShortcut="t" />
    <item android:icon="@android:drawable/ic_menu_preferences" android:id="@id/menu_settings" android:visible="false" android:title="@string/settings" />
    <item android:icon="@drawable/ic_menu_fast_forward" android:id="@id/menu_fast_forward" />
    <item android:icon="@drawable/ic_menu_netplay" android:id="@id/menu_netplay_connect" android:visible="false" android:title="@string/netplay_connect">
        <menu>
            <item android:id="@id/menu_bluetooth_server" android:title="@string/bluetooth_server" />
            <item android:id="@id/menu_bluetooth_client" android:title="@string/bluetooth_client" />
            <item android:id="@id/menu_wifi_server" android:title="@string/wifi_server" />
            <item android:id="@id/menu_wifi_client" android:title="@string/wifi_client" />
        </menu>
    </item>
    <item android:icon="@drawable/ic_menu_disconnect" android:enabled="false" android:id="@id/menu_netplay_disconnect" android:visible="false" android:title="@string/netplay_disconnect" />
    <item android:icon="@android:drawable/ic_menu_view" android:enabled="false" android:id="@id/menu_cheats" android:visible="false" android:title="@string/cheats" />
    <item android:icon="@android:drawable/ic_menu_revert" android:id="@id/menu_reset" android:title="@string/reset" />
    <item android:icon="@android:drawable/ic_menu_camera" android:id="@id/menu_screenshot" android:title="@string/screenshot" />
    <item android:icon="@android:drawable/ic_menu_close_clear_cancel" android:id="@id/menu_close" android:title="@string/close" />
</menu>